--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css" />
 
-    <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/style.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/style.css') }}" type="text/css" media="all"/>
     <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/normalize.css') }}"/>
     <link rel="stylesheet" href="{{ asset('saintmichael/stylesheets/app.css') }}"/>
 
