--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
@@ -57,7 +57,7 @@
             <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Listado de Estudiantes"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
-        <div id="report" style="margin-top: 25px;">
+        <div id="report" style="margin-top: 25px; width: 950px;">
             {% if withStudents == null %}
                 <div class="titles" style="font-size: 10px;">
                     <div class="left">Corporación Educativa Saint Michael S.A.</div>
