--- a/web/saintmichael/stylesheets/style.css
+++ b/web/saintmichael/stylesheets/style.css
@@ -26,9 +26,6 @@ body:before {
 	margin-top:-32767px;/
 }
 
-.left{float: left;}
-.right{float: right;}
-
 .titleRow{height: 56px; vertical-align: middle; line-height: 44px;}
 .services{ width:178px; height:210px; background:url(../images/bg-body2.jpg) 0 0 repeat;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease; margin:5px 9px 5px 5px; float:left;}
 .services.first{margin:5px 9px 5px 0px;}
@@ -212,31 +209,23 @@ a.desc {line-height: 32px; font-size: 15px; float: left; text-align: right; colo
 .filter-search .internal #searchForm input[type="radio"] {width: 25px;}
 
 /***     REPORTS    ***/
-#report {background-color: #fff; padding: 15px; width: 950px;}
-.header_row{border-bottom: thin solid #000; height: 23px; line-height: 23px; vertical-align: bottom; margin-bottom: 15px;}
-.field{font-weight: bold; font-size: 16px; color: #000; width: 100%; display: inline-block; vertical-align: top;}
-.field_value {font-size: 11px; color: #000; display: inline-block; vertical-align: top;}
-.titles{font-size: 18px; color: #000;}
-.report_footer{font-size: 16px; margin-bottom: 15px; margin-top: 15px; font-weight: bold; color: #000;}
-.route{font-weight: bold; font-size: 13px; color: #000; margin-top: 25px;}
-.student_title{border-bottom: thin solid #000; font-size: 11px; color: #000; font-weight: bold; line-height: 16px; height: 17px; margin-bottom: 15px; margin-top: 15px;}
-.student_row{font-size: 11px; height: 14px; line-height: 16px; color: #000; display: inline-block;}
-.student_footer{font-size: 10px; color: #000; font-weight: bold;}
-.area_title{font-weight: bold; margin-top: 25px; text-decoration: underline; color: #000;}
+.clear{clear:both;line-height:0;font-size:0;overflow:hidden;height:0;width:100%;}
+.right {float: right;}
+.left {float: left;}
 
-@media print {
-    #report {background-color: #fff; padding: 15px; width: 950px;}
-    .header_row{border-bottom: thin solid #000; height: 23px; line-height: 23px; vertical-align: bottom; margin-bottom: 15px;}
-    .field{font-weight: bold; font-size: 11px; color: #000; width: 100%; display: inline-block; vertical-align: top;}
-    .field_value {font-size: 11px; color: #000; display: inline-block; vertical-align: top;}
-    .titles{font-size: 18px; color: #000;}
-    .report_footer{font-size: 16px; margin-bottom: 15px; margin-top: 15px; font-weight: bold; color: #000;}
-    .route{font-weight: bold; font-size: 13px; color: #000; margin-top: 25px;}
-    .student_title{border-bottom: thin solid #000; font-size: 11px; color: #000; font-weight: bold; line-height: 16px; height: 17px; margin-bottom: 15px; margin-top: 15px;}
-    .student_row{font-size: 11px; height: 14px; line-height: 16px; color: #000; display: inline-block;}
-    .student_footer{font-size: 10px; color: #000; font-weight: bold;}
-    .area_title{font-weight: bold; margin-top: 25px; text-decoration: underline; color: #000;}
-}
+#report {background-color: #fff; padding: 15px;}
+#report .header_row{border-bottom: thin solid #000; height: 23px; line-height: 23px; vertical-align: bottom; margin-bottom: 15px;}
+#report .header_row .field{font-weight: bold; font-size: 16px; color: #000;}
+#report .fields_row .field_value {font-size: 16px; color: #000;}
+#report .titles{font-size: 18px; color: #000;}
+#report .footer{font-size: 16px; margin-bottom: 15px; margin-top: 15px; font-weight: bold; color: #000;}
+#report .route{font-weight: bold; font-size: 13px; color: #000; margin-top: 25px;}
+#report .student_title{border-bottom: thin solid #000; font-size: 11px; color: #000; font-weight: bold; line-height: 16px; height: 14px; margin-bottom: 15px; margin-top: 15px;}
+#report .student_row{font-size: 11px; height: 14px; line-height: 16px; color: #000;}
+#report .student_footer{font-size: 10px; color: #000; font-weight: bold;}
+#report .area_title{font-weight: bold; margin-top: 25px; text-decoration: underline; color: #000;}
+
+.pageBreak { page-break-after: always; }
 
 /****   loginPanel   ***/
 .loginPanel{margin: auto; background-color: #fff; width: 450px; padding: 15px;}
